src/objects/Widget__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Number__c</fullName>
        <label>Model Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <externalId>true</externalId>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Widget</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Widgets</fullName>
        <columns>NAME</columns>
        <columns>Part_Number__c</columns>
        <columns>Model_Number__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Widgets</label>
    </listViews>
    <nameField>
        <displayFormat>WID{0000}</displayFormat>
        <label>Widget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Widgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>